@@ -32,6 +32,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <deque>	// STL container
 #include <string>	// STL string
 
+class Game_object;
+
 /*
  *	A value that we store can be an integer, string, or array.
  */
@@ -43,55 +45,69 @@ public:
 		int_type = 0,
 		string_type = 1,	// Allocated string.
 		array_type = 2,
-		end_of_array_type = 3	// Marks end of array.
+		end_of_array_type = 3,	// Marks end of array.
+		pointer_type = 4
 		};
 private:
-	unsigned char type;		// Type stored here.
+	Val_type type;		// Type stored here.
 	union
 		{
 		long intval;
 		const char *str;
 		Usecode_value *array;
+		Game_object *ptr;
 		} value;
 					// Count array elements.
 	static int count_array(const Usecode_value& val);
 public:
-	inline Usecode_value() : type((unsigned char) int_type)
+	inline Usecode_value() : type(int_type)
 		{ value.intval = 0; }
-	inline Usecode_value(int ival) : type((unsigned char) int_type)
+	inline Usecode_value(int ival) : type(int_type)
 		{ value.intval = ival; }
 	Usecode_value(const char *s);
 					// Create array with 1st element.
 	Usecode_value(int size, Usecode_value *elem0) 
-			: type((unsigned char) array_type)
+			: type(array_type)
 		{
 		value.array = new Usecode_value[size + 1];
-		value.array[size].type = (unsigned char) end_of_array_type;
+		value.array[size].type = end_of_array_type;
 		if (elem0)
 			value.array[0] = *elem0;
 		}
+	Usecode_value(Game_object *ptr) : type(pointer_type)
+		{ value.ptr = ptr; }
 	~Usecode_value();
 	Usecode_value &operator=(const Usecode_value& v2);
 					// Copy ctor.
 	inline Usecode_value(const Usecode_value& v2)
-		: type((unsigned char) int_type)
+		: type(int_type)
 		{ *this = v2; }
 					// Comparator.
 	void	push_back(int);
 	int operator==(const Usecode_value& v2);
 	inline Val_type get_type() const
-		{ return (Val_type) type; }
+		{ return type; }
 	int get_array_size() const		// Get size of array.
-		{ return type == (int) array_type ? count_array(*this) : 0; }
+		{ return (type == array_type) ? count_array(*this) : 0; }
 	bool is_array() const
-		{ return type == (int) array_type; }
+		{ return (type == array_type); }
 	bool is_int() const
-		{ return type == (int) int_type; }
+		{ return (type == int_type); }
+	bool is_ptr() const
+		{ return (type == pointer_type); }
 	long get_int_value() const	// Get integer value.
-		{ return (type == (int) int_type ? value.intval : 0); }
+		{ 
+#if DEBUG
+			if (type == pointer_type || (type == int_type && (value.intval > 0x10000 || value.intval < -0x10000)))
+				cerr << "Probable attempt at getting int value of pointer!!" << endl; 
+#endif
+			return ((type == int_type) ? value.intval : 0); 
+		}
+	Game_object* get_ptr_value() const	// Get pointer value.
+		{ return ((type == pointer_type) ? value.ptr : 0); }
 					// Get string value.
 	const char *get_str_value() const
-		{ return (type == (int) string_type ? value.str : 0); }
+		{ return ((type == string_type) ? value.str : 0); }
 	long need_int_value() const
 		{
 					// Convert strings.
@@ -104,13 +120,21 @@ public:
 					// Get an array element, or *this.
 	inline Usecode_value& get_elem(int i)
 		{
-		return type == (int) array_type ? value.array[i] : *this;
+		return (type == array_type) ? value.array[i] : *this;
 		}
 	inline bool is_false() const	// Represents a FALSE value?
 		{
-		return is_int() ? value.intval == 0
-				: is_array() ? value.array[0].type == 
-					(int) end_of_array_type : 0;
+		switch(type)
+			{
+			case int_type:
+				return value.intval == 0;
+			case pointer_type:
+				return value.ptr == NULL;
+			case array_type:
+				return value.array[0].type == end_of_array_type;
+			default:
+				return false;
+			}
 		}
 	inline bool is_true() const
 		{ return !is_false(); }
