@@ -1,3 +1,6 @@
+2000-11-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* usecode.cc/h, useval.cc/h: added pointer type to Usecode_value
+
 2000-11-20  Tristan Tarrant <nadir@users.sourceforge.net>
 
 	* data/play_1st_scene.shp, data/exit.shp: 2 new shapes
